--- a/EbookStore/EbookUI/Views/Home/Index.cshtml
+++ b/EbookStore/EbookUI/Views/Home/Index.cshtml
@@ -2,7 +2,45 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="~/Images/banner1.jpg" alt="First slide" height="400" style="width:100%;">
+                <div class="carousel-content">
+                    <div class="primary">You only have to Know one thing</div>
+                    <div class="secondary">You can learn anything</div>
+                    <div class="third">For free. For everyone</div>
+                    <button class="btn-green">START LEARNING NOW!</button>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/Images/banner2.jpg" alt="Second slide" height="400">
+                <div class="carousel-content">
+                    <div class="primary">You only have to Know one thing</div>
+                    <div class="secondary">You can learn anything</div>
+                    <div class="third">For free. For everyone</div>
+                    <button class="btn-green">START LEARNING NOW!</button>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/Images/banner3.jpg" alt="Third slide" height="400">
+                <div class="carousel-content">
+                    <div class="primary">You only have to Know one thing</div>
+                    <div class="secondary">You can learn anything</div>
+                    <div class="third">For free. For everyone</div>
+                    <button class="btn-green">START LEARNING NOW!</button>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 </div>
+
