--- a/EbookStore/EbookUI/Views/Shared/_Layout.cshtml
+++ b/EbookStore/EbookUI/Views/Shared/_Layout.cshtml
@@ -3,29 +3,69 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - EbookUI</title>
+    <title>@ViewData["Title"] - EBookLibrary</title>
+
+    <link rel="shortcut icon" href="~/Images/logo.jpg">
+    <link rel="stylesheet" href="~/css/site.css" />
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+        <script src="~/lib/jquery/jquery.js"></script>
+        <script src="~/lib/twitter-bootstrap/js/bootstrap.js"></script>
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
-              crossorigin="anonymous"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"
+              asp-fallback-href="~/lib/twitter-bootstrap/css/bootstrap.css"
+              asp-fallback-test-class="sr-only"
+              asp-fallback-test-property="position"
+              asp-fallback-test-value="absolute"
+              asp-suppress-fallback-integrity="true" />
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </environment>
-    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
+    <div class="container-fluid topheader" style="height:50px;background-color: #242c42;">
+        <div class="row" style="padding:10px;">
+            <div class="col-md-6" style="display:flex;">
+                <div class="col-md-5">
+                    <a href="mailto:info@Ebook.com">
+                        <i class="topbar-icon fa fa-envelope-o"></i><span>&nbsp;&nbsp;info@Ebook.com</span>
+                    </a>
+                </div>
+                <div class="col-md-6">
+                    <span> <i class="topbar-icon fa fa-phone"></i>&nbsp;&nbsp;Tel: +91 (40) 4448 1122</span>
+                </div>
+            </div>
+            <div class="col-md-3"></div>
+            <div class="col-md-3">
+                <a href="http://facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus"></i></a>
+                <a href="http://twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="http://dribbble.com" target="_blank"><i class="fa fa-dribbble"></i></a>
+                <a href="https://pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a>
+                <a href="http://instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
+            </div>
+        </div>
+    </div>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">EbookUI</a>
+
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/Images/logo.jpg" height="50" width="80" />
+                </a>
+
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
@@ -33,45 +73,89 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Courses</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container-fluid">
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2019 - EbookUI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="footer text-muted">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>EBook Library</h3>
+                    <span>EBook library is a great start for an education personnel or organization to start the &nbsp;online business with one Click.</span>
+                    <div class="contact-item">
+                        <i class="fa fa-envelope-o"></i>
+                        <a href="mailto:info@Ebook.com">&nbsp;info@Ebook.com</a>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fa fa-phone"></i><span>&nbsp;Tel: +91 (40) 4448 1122</span>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fa fa-map-marker"></i>
+
+                        <span>&nbsp;"Vaishnavi's Cynosure", Unit: 4A to 4F,</span><br />
+                        <span>4th Floor, #1-72/3/19 to 49/VC,</span><br />
+                        <span>Survey No:18, Gachibowli,</span><br />
+                        <span>Hyderabad - 500 032, Telangana,</span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="text-center">Useful Links</h3>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Home</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Courses</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Register</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Login</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Privacy</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;AboutUs</a>
+                        </div>
+                        <div class="col-md-6">
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Home</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Courses</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Register</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Login</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Privacy</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;AboutUs</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 gallerylist">
+                    <h3>Gallery</h3>
+                    <div class="row">
+                        <a><img class="img-responsive" src="~/Images/1.jpg" height="75" width="75"></a>
+                        <a><img class="img-responsive" src="~/Images/2.jpg" height="75" width="75"></a>
+                        <a><img class="img-responsive" src="~/Images/3.jpg" height="75" width="75"></a>
+                        <a><img class="img-responsive" src="~/Images/4.jpg" height="75" width="75"></a>
+                        <a><img class="img-responsive" src="~/Images/5.jpg" height="75" width="75"></a>
+                        <a><img class="img-responsive" src="~/Images/6.jpg" height="75" width="75"></a>
+                        <a><img class="img-responsive" src="~/Images/7.jpg" height="75" width="75"></a>
+                        <a><img class="img-responsive" src="~/Images/8.jpg" height="75" width="75"></a>
+                        <a><img class="img-responsive" src="~/Images/3.jpg" height="75" width="75"></a>
+                        <a><img class="img-responsive" src="~/Images/6.jpg" height="75" width="75"></a>
+                        <a><img class="img-responsive" src="~/Images/2.jpg" height="75" width="75"></a>
+                        <a><img class="img-responsive" src="~/Images/8.jpg" height="75" width="75"></a>
+                    </div>
+                </div>
+            </div><hr />
+            <div class="row">
+                <span> © 2019 EBook Library., All Rights Reserved.</span>
+            </div>
         </div>
     </footer>
 
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
-        </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
-        </script>
-    </environment>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+
+
 
     @RenderSection("Scripts", required: false)
 </body>
