ADD ListofBooks and BookController and update sql server connection by Gupta.

--- a/EbookStore/EbookUI/Views/Home/Courses.cshtml
+++ b/EbookStore/EbookUI/Views/Home/Courses.cshtml
@@ -1,6 +1,44 @@
 ﻿@{
     ViewData["Title"] = "Courses List";
 }
-<h1 class="text-center" style=" color: #86bc42;">@ViewData["Title"]</h1>
+    <h1 class="text-center" style=" color: #86bc42;">@ViewData["Title"]</h1>
 
-<p>Use this page to display list of available courses.</p>
+
+<div class="row">
+    <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="~/Images/1.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">ASP.NET Core </h5>
+                <p class="card-text">ASP.NET Core is a free and open-source web framework, and higher performance than ASP.NET, developed by Microsoft and the community.</p>
+                <a href="#" class="btn btn-primary">View</a>
+                <a href="#" class="btn btn-primary">Edit</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="~/Images/2.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Angular7</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">View</a>
+                <a href="#" class="btn btn-primary">Edit</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="~/Images/2.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Angular7</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">View</a>
+                <a href="#" class="btn btn-primary">Edit</a>
+            </div>
+        </div>
+    </div>
+
+</div>
