Migrations Changes by Gupta and db Updated.

--- a/EbookStore/EbookUI/Views/Home/Courses.cshtml
+++ b/EbookStore/EbookUI/Views/Home/Courses.cshtml
@@ -7,9 +7,9 @@
 <div class="row">
     <div class="col-md-4">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="~/Images/1.jpg" alt="Card image cap">
+            <img src="~/Images/physics.jpg" alt="Physics Ebook" height="300" width="300">
             <div class="card-body">
-                <h5 class="card-title">ASP.NET Core </h5>
+                <h5 class="card-title">Physics</h5>
                 <p class="card-text">ASP.NET Core is a free and open-source web framework, and higher performance than ASP.NET, developed by Microsoft and the community.</p>
                 <a href="#" class="btn btn-primary">View</a>
                 <a href="#" class="btn btn-primary">Edit</a>
@@ -19,9 +19,9 @@
 
     <div class="col-md-4">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="~/Images/2.jpg" alt="Card image cap">
+            <img src="~/Images/chemistry.jpg" alt="Chemistry Ebook" height="300" width="300">
             <div class="card-body">
-                <h5 class="card-title">Angular7</h5>
+                <h5 class="card-title">Chemistry</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="#" class="btn btn-primary">View</a>
                 <a href="#" class="btn btn-primary">Edit</a>
@@ -31,9 +31,9 @@
 
     <div class="col-md-4">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="~/Images/2.jpg" alt="Card image cap">
+            <img src="~/Images/maths.jpg" alt="Maths Ebook" height="300" width="300">
             <div class="card-body">
-                <h5 class="card-title">Angular7</h5>
+                <h5 class="card-title">Maths</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="#" class="btn btn-primary">View</a>
                 <a href="#" class="btn btn-primary">Edit</a>
