--- a/EbookStore/EbookUI/Views/Shared/_Layout.cshtml
+++ b/EbookStore/EbookUI/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Courses">Courses</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Books</a>
                         </li>
                     </ul>
                 </div>
