List and view operations are completed

--- a/EbookStore/EbookUI/Views/Books/Details.cshtml
+++ b/EbookStore/EbookUI/Views/Books/Details.cshtml
@@ -18,7 +18,7 @@
             </div>
             <div class="card-footer text-center">
                 <a asp-controller="Books" asp-action="Index" class="btn btn-primary m-1">Back</a>
-                <a asp-controller="Products" asp-action="Edit" asp-route-id="@Model.BookId" class="btn btn-primary m-1">Edit</a>
+                <a asp-controller="Books" asp-action="Edit" asp-route-id="@Model.BookId" class="btn btn-primary m-1">Edit</a>
             </div>
         </div>
     </div>
