--- a/EbookStore/EbookUI/Views/Books/Create.cshtml
+++ b/EbookStore/EbookUI/Views/Books/Create.cshtml
@@ -20,7 +20,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
         </div>   
-        <div class="form-group row">
+        @*<div class="form-group row">
             <label asp-for="Image" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
                 <div class="custom-file">
@@ -28,7 +28,7 @@
                     <label class="custom-file-label">Choose File...</label>
                 </div>
             </div>
-        </div>
+        </div>*@
         <div class="form-group row">
             <div class="col-sm-10">
                 <button type="submit" class="btn btn-primary">Create</button>
