--- a/EbookStore/EbookUI/Views/Shared/_Layout.cshtml
+++ b/EbookStore/EbookUI/Views/Shared/_Layout.cshtml
@@ -40,23 +40,21 @@
                     <span> <i class="topbar-icon fa fa-phone"></i>&nbsp;&nbsp;Tel: +91 (40) 4448 1122</span>
                 </div>
             </div>
-            <div class="col-md-3"></div>
-            <div class="col-md-3">
+            <div class="col-md-5"></div>
+            <div class="col-md-1">
                 <a href="http://facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus"></i></a>
                 <a href="http://twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
-                <a href="http://dribbble.com" target="_blank"><i class="fa fa-dribbble"></i></a>
-                <a href="https://pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a>
                 <a href="http://instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
             </div>
         </div>
     </div>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
-            <div class="container">
+            <div class="container-fluid">
 
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="~/Images/logo.jpg" height="50" width="80" />
+
+                    <img src="~/Images/ebooklogo.png" height="50" width="80" />
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -89,12 +87,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
-                    <h3>EBook Library</h3>
-                    <span>EBook library is a great start for an education personnel or organization to start the &nbsp;online business with one Click.</span>
-                    <div class="contact-item">
-                        <i class="fa fa-envelope-o"></i>
-                        <a href="mailto:info@Ebook.com">&nbsp;info@Ebook.com</a>
-                    </div>
+                    <h3>Contact Us</h3>
                     <div class="contact-item">
                         <i class="fa fa-phone"></i><span>&nbsp;Tel: +91 (40) 4448 1122</span>
                     </div>
@@ -108,33 +101,22 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <h3 class="text-center">Useful Links</h3>
+                    <h3>Useful Links</h3>
                     <div class="row">
                         <div class="col-md-6">
                             <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Home</a>
-                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Courses</a>
                             <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Register</a>
                             <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Login</a>
-                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Privacy</a>
-                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;AboutUs</a>
                         </div>
                         <div class="col-md-6">
-                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Home</a>
-                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Courses</a>
-                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Register</a>
-                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Login</a>
-                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Privacy</a>
-                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;AboutUs</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;Books</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;About Ebooks Store</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 gallerylist">
                     <h3>Gallery</h3>
                     <div class="row">
-                        <a><img class="img-responsive" src="~/Images/1.jpg" height="75" width="75"></a>
-                        <a><img class="img-responsive" src="~/Images/2.jpg" height="75" width="75"></a>
-                        <a><img class="img-responsive" src="~/Images/3.jpg" height="75" width="75"></a>
-                        <a><img class="img-responsive" src="~/Images/4.jpg" height="75" width="75"></a>
                         <a><img class="img-responsive" src="~/Images/5.jpg" height="75" width="75"></a>
                         <a><img class="img-responsive" src="~/Images/6.jpg" height="75" width="75"></a>
                         <a><img class="img-responsive" src="~/Images/7.jpg" height="75" width="75"></a>
@@ -146,7 +128,7 @@
                     </div>
                 </div>
             </div><hr />
-            <div class="row">
+            <div class=" container text-center">
                 <span> © 2019 EBook Library., All Rights Reserved.</span>
             </div>
         </div>
