--- a/EbookStore/EbookUI/Views/Books/Index.cshtml
+++ b/EbookStore/EbookUI/Views/Books/Index.cshtml
@@ -4,20 +4,20 @@
     ViewData["Title"] = "List of Books";
 }
 
-<div class="card-deck">
+    <div class="row mt-2 ml-2">
 
-    @foreach (var item in Model)
-    {
-        var photoPath = "~/images/" + (item.ImageUrl ?? "noimage.jpg");
-        <div class="card m-3" style="min-width:18rem;">
-            <div class="card-header">
-                <h3>@item.BookName</h3>
+        @foreach (var item in Model)
+        {
+            var photoPath = (item.ImageUrl ?? "noimage.jpg");
+
+            <div class="card p-3">
+                <img class="card-img-top" src="@photoPath" asp-append-version="true" alt="Card image cap" max-height="150" max-width="150">
+                <div class="card-body text-center">
+                    <h5 class="card-title">@item.BookName</h5>
+                    <p class="card-text">@item.Description</p>
+                    <a asp-controller="Books" asp-action="Details" asp-route-id="@item.BookId" class="btn btn-primary m-1">View</a>
+                    <a asp-controller="Books" asp-action="Edit" asp-route-id="@item.BookId" class="btn btn-primary m-1">Edit</a>
+                </div>
             </div>
-            <img class="imageThumbnail" src="@photoPath" asp-append-version="true" />
-            <div class="card-footer text-center">
-                <a asp-controller="Books" asp-action="Details" asp-route-id="@item.BookId" class="btn btn-primary m-1">View</a>
-                <a asp-controller="Books" asp-action="Edit" asp-route-id="@item.BookId" class="btn btn-primary m-1">Edit</a>
-            </div>
-        </div>
-    }
-</div>
+        }
+    </div>
