--- a/EbookStore/EbookUI/Views/Books/Details.cshtml
+++ b/EbookStore/EbookUI/Views/Books/Details.cshtml
@@ -2,19 +2,20 @@
 
 @{
     ViewData["Title"] = "View Book Details";
-    var photoPath = "~/images/" + (Model.ImageUrl ?? "noimage.jpg");
+    var photoPath = (Model.ImageUrl ?? "noimage.jpg");
 }
 
-<div class="row justify-content-center m-3">
-    <div class="col-sm-8">
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
         <div class="card">
-            <div class="card-header">
+            <div class="card-header text-center">
                 <h1>@Model.BookName</h1>
             </div>
             <div class="card-body text-center">
-                <img src="@photoPath" class="imageThumbnail" asp-append-version="true" />
-                <h4>Product Id: @Model.BookId</h4>
-                <h4>Description: @Model.Description</h4>                
+                <img src="@photoPath" class="imageThumbnail" asp-append-version="true" height="250" width="250" /><hr />
+                <h4>Book Id: @Model.BookId</h4>
+                <h4>Description: @Model.Description</h4>
             </div>
             <div class="card-footer text-center">
                 <a asp-controller="Books" asp-action="Index" class="btn btn-primary m-1">Back</a>
@@ -22,6 +23,7 @@
             </div>
         </div>
     </div>
+    <div class="col-md-2"></div>
 </div>
 
 @section Scripts {
