--- a/EbookStore/EbookUI/Views/Books/Index.cshtml
+++ b/EbookStore/EbookUI/Views/Books/Index.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "List of Books";
 }
 
+<h1 class="text-center p-2" style="color:#86bc42">List of Books</h1><br />
+
 <div class="row">
 
     @foreach (var item in Model)
